--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "date-fns": "^2.0.0-alpha.36",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.6.0",
     "multer": "^1.4.1",
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.3",
