16 - Configurando templates de e-mail

--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.0.0-alpha.36",
     "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.0",
     "multer": "^1.4.1",
     "nodemailer": "^6.2.1",
+    "nodemailer-express-handlebars": "^3.0.0",
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.8.7",
