--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "queue": "nodemon src/queue.js"
   },
   "dependencies": {
+    "@sentry/node": "5.4.3",
     "bcryptjs": "^2.4.3",
     "bee-queue": "^1.2.2",
     "date-fns": "^2.0.0-alpha.36",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "express-handlebars": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.0",
@@ -21,6 +23,7 @@
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.8.7",
+    "youch": "^2.0.10",
     "yup": "^0.27.0"
   },
   "devDependencies": {
